--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.5.0.122203" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms.Maps" version="2.5.0.122203" targetFramework="xamarinios10" />
 </packages>
