--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Naxam.BottomTabbedPage" version="0.1.0.1" targetFramework="monoandroid71" />
+  <package id="Naxam.Ittianyu.BottomNavExtension" version="1.2.2" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Plugin.Permissions" version="2.2.1" targetFramework="monoandroid71" />
   <package id="Plugin.Share" version="7.1.1" targetFramework="monoandroid71" />
+  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid71" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.5" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
