--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -9,9 +9,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.Cualeva.Omal</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.4</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.4</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
@@ -25,7 +25,7 @@
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
-		<string>armv7</string>
+		<string>arm64</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -73,5 +73,19 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Questa app richiede l&apos;accesso al calendario per funzionare correttamente</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Questa app richiede l&apos;accesso ai contatti per funzionare correttamente</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Questa app richiede l&apos;accesso al microfono per funzionare correttamente</string>
+	<key>NSSiriUsageDescription</key>
+	<string>Questa app richiede l&apos;acceso a siri per funzionare correttamente</string>
+	<key>kTCCServiceMediaLibrary</key>
+	<string>Questa app richiede l&apos;accesso ad apple music per funzionare correttamente</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Questa app richiede l&apos;accesso alla libreria multimediale</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<string></string>
 </dict>
 </plist>
