--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Naxam.BottomTabbedPage" version="0.1.0.1" targetFramework="monoandroid71" />
   <package id="Naxam.Ittianyu.BottomNavExtension" version="1.2.2" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
