--- a/iOS/Omal.iOS.csproj
+++ b/iOS/Omal.iOS.csproj
@@ -215,6 +215,9 @@
     <BundleResource Include="Resources\omalc13.png" />
     <BundleResource Include="Resources\omalc14.png" />
     <BundleResource Include="Resources\rightarrow.png" />
+    <BundleResource Include="Resources\IMG074428.png" />
+    <BundleResource Include="Resources\IMG06837.png" />
+    <BundleResource Include="Resources\IMG051428.png" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppDelegate.cs" />
