--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -4,14 +4,12 @@
 <dict>
 	<key>CFBundleDisplayName</key>
 	<string>Omal</string>
-	<key>CFBundleName</key>
-	<string>Omal</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.Cualeva.Omal</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.8</string>
+	<string>1.9</string>
 	<key>CFBundleVersion</key>
-	<string>1.8</string>
+	<string>1.9</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
@@ -93,5 +91,7 @@
 		<string>MKDirectionsModeCar</string>
 		<string>MKDirectionsModeBike</string>
 	</array>
+	<key>CFBundleName</key>
+	<string>OMAL</string>
 </dict>
 </plist>
