Ulteriori miglioramenti grafici

--- a/Droid/Omal.Droid.csproj
+++ b/Droid/Omal.Droid.csproj
@@ -207,6 +207,7 @@
     <Compile Include="CustomControls\CualevaGradientContentPageRenderAndroid.cs" />
     <Compile Include="CustomControls\CustomCellRender.cs" />
     <Compile Include="CustomControls\CualevaNavigationPageRenderAndroid.cs" />
+    <Compile Include="CustomControls\TextCellCellRender.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
