Gestione pasword Dimenticata e autologin in apertura App

--- a/iOS/Omal.iOS.csproj
+++ b/iOS/Omal.iOS.csproj
@@ -213,6 +213,7 @@
     <Compile Include="CustomControls\CualevaGradientContentPageRenderIOS.cs" />
     <Compile Include="CustomControls\CualevaNavigationPageRenderIOS.cs" />
     <Compile Include="Persistence\CustomNavigationManager.cs" />
+    <Compile Include="CustomControls\UnderlineLabelRenderIOS.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Entitlements.plist" />
