--- a/Droid/Omal.Droid.csproj
+++ b/Droid/Omal.Droid.csproj
@@ -209,6 +209,7 @@
     <Compile Include="CustomControls\CualevaNavigationPageRenderAndroid.cs" />
     <Compile Include="CustomControls\TextCellCellRender.cs" />
     <Compile Include="Persistence\CustomNavigationManager.cs" />
+    <Compile Include="CustomControls\UnderlineLabelRenderAndroid.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
